# cpu-Tracker-notify-by-Email

./: CMakeLists.txt  README.md  cpuManger.cpp  cpuManger.hpp  main.cpp  script.sh
