cmake_minimum_required(VERSION 3.1)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_EXTENSIONS ON)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

project(CPU_Tracker)

file(GLOB SRC_FILES ${PROJECT_SOURCE_DIR}/*.cpp)
file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/script.sh
    DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
add_executable(${PROJECT_NAME} ${SRC_FILES})